[SECD-367] Use Nexpose OpenAPI Spec for structs. Implement configured filters.
