# api.yaml
@@ -46,15 +46,7 @@ info:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
 paths:
-  /healthcheck:
-    get:
-      description: "Liveness check."
-      responses:
-        "200":
-          description: "Success."
-      x-transportd:
-        backend: app
-  /filter:
+  /2015-03-31/functions/{functionName}/invocations:
     post:
       description: Accepts a Nexpose asset payload with Nexpose vulnerabilities and returns the asset payload with a filtered list of vulnerabilities based on configuration.
       requestBody:
@@ -78,9 +70,9 @@ paths:
           - "responsevalidation"
           - "lambda"
         lambda:
-          arn: "name_or_arn"
+          arn: "filter"
           async: false
-          request: '{}'
+          request: '#! json .Request.Body !#'
           success: '{"status": 200, "bodyPassthrough": true}'
           error: '{"status": 500, "bodyPassthrough": true}'
 components:
@@ -211,7 +203,7 @@ components:
             $ref: '#/components/schemas/UserAccount'
         vulnerabilities:
           $ref: '#/components/schemas/AssetVulnerabilities'
-        assetVulnerabilities:
+        assetVulnerabilityDetails:
           type: array
           description: List of vulnerabilities found on the asset.
           items:
